--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header .inner img{
     left: 0px;
     bottom: 15px;
     width: 200px;
-    height: 100px;
+    height: 90px;
 }
 header .inner h1 a{
     font: bold 24px/1 "arial";
@@ -53,7 +53,7 @@ header .inner #gnb{
     bottom: 0px;
     right: 0px;
 }
-header .inner #gnb li{
+header .inner #gnb>li{
     float: left;
 }
 header .inner #gnb li a{
@@ -62,14 +62,32 @@ header .inner #gnb li a{
     font: bold 15px/1 "arial";
     color: #555;
     padding: 20px 40px;
-    transition: all 0.5s;
+    position: relative;
 }
 header .inner #gnb li a:hover{
     background: #555;
     color: #fff;
 }
 .submenu{
+    position: absolute;
+    top: 80px;
     display: none;
+    z-index: 3;
+}
+.menubg{
+    position: absolute;
+    top: 120px;
+    right:30px;
+    background-color: bisque;
+    width: 600px;
+    display: none;
+    height: 400px;
+    z-index: 2;
+}
+.submenu li a{
+    display: block;
+    position: absolute;
+
 }
 
 figure{
