--- a/css/style.css
+++ b/css/style.css
@@ -38,15 +38,21 @@ header .inner .util{
     position: absolute;
     top: 20px;
     right: 20px;
+
 }
 header .inner .util li{
     float: left;
 }
 header .inner .util li a{
     display: block;
-    font: 12px/1 "arial";
-    color: #999;
+    font-size: 30px;
+    color: #333;
     padding: 0px 10px;
+    transition: all 0.5s;
+}
+.util li a:hover{
+    transform: scale(1.3);
+    opacity: 0.8;
 }
 header .inner #gnb{
     position: absolute;
@@ -227,16 +233,19 @@ footer{
     width: 100%;
     background-color: rgb(26, 26, 62);
     padding: 100px 0px;
+    margin:  20px auto;
     border-top: 1px solid #888;
 }
 footer .inner{
+    
 width: 1180px;
-margin: 0px auto;
+margin: 20px auto;
 }
 footer .inner .upper{
     width: 100%;
     border-bottom: 1px solid #777;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    margin-top: 20px;
 }
 footer .inner .upper::after{
     content: "";
